# pipe-chats

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  make.sh  test-client.sh
apps/: CMakeLists.txt  handler.cpp  handler.h  injector.h  main.cpp  utils.h
include/boost/di/extension/injections/: extensible_injector.hpp  factory.hpp
src/: CMakeLists.txt
src/pipe-chat/: CMakeLists.txt  client_msg.h  client_pipe_name_prefix.h  inamed_pipe.h  named_pipe.h  server_pipe_name.h
src/pipe-chat/clnt/: CMakeLists.txt  input_poller.cpp  input_poller.h  pcclient.cpp  pcclient.h
src/pipe-chat/clnt/interface/: CMakeLists.txt  iinput_poller.h
src/pipe-chat/svr/: CMakeLists.txt  client.cpp  client.h  listener.cpp  listener.h  pcserver.cpp  pcserver.h
src/pipe-chat/svr/interface/: CMakeLists.txt  iclient.h  ilistener.h
tests/: CMakeLists.txt
tests/pipe-chat/: CMakeLists.txt
tests/pipe-chat/clnt/: CMakeLists.txt  pcclient_test.cpp
tests/pipe-chat/svr/: CMakeLists.txt  client_test.cpp  factory_fake.h  listener_test.cpp  pcserver_test.cpp
